[package]
name = "copt_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
chrono = { version = "0.4", features = ["serde"] }
actix-rt = "2"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
futures-util = "0.3.31"

# Nuevas dependencias para firma digital y codificación
ed25519-dalek = "1.0.1"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"

